Prevent y overflow from circular progress.

--- a/src/style.scss
+++ b/src/style.scss
@@ -21,7 +21,7 @@
   flex-shrink: 0;
 }
 .TesterUISummary_CowBar {
-  padding: 0.5em;
+  padding: 1em;
   margin-left: 1em;
   margin-right: 1em;
 
